# LucaOne

./: .gitignore  FlashAttetion.md  Huggingface_README.md  NOTICE  README.md  TensorCores.md  push_huggingface.py  pyproject.toml  requirement_others.txt  requirements.txt  setup.py  upload_pip_huggingface.md
config/: lucaone_gplm.json
data/pseudogene/: aligned_pairs.csv
src/: __init__.py  args.py  batch_converter.py  batch_converter_for_eval_mask.py  data_collator.py  do_eval_all_checkpoints.py  do_eval_mask.py  encoder.py  evaluator.py  file_operator.py  get_embedding-bak.py  get_embedding.py  get_embedding_bak.py  get_embedding_v1.py  multi_files_stream_dataloader.py  run.py  run_eval.py  run_eval_mask.py  tensorboardx_for_continue_training.py  tester.py  trainer.py  utils.py
src/common/: classification_loss.py  loss.py  masked_loss.py  metrics.py  multi_label_metrics.py  multi_task_loss.py  pairwise_loss.py  pairwise_metrics.py  regression_loss.py
src/data_analysis/: pseudogene_only_mismatch.py
src/downstream/: README.md  args.py  get_embedding.py
src/embedding/: README.md  get_embedding.py
src/eval/: run_multi_v2.0_all_checkpoints_eval_val_test.sh  run_multi_v2.0_eval_mask.sh  run_multi_v2.0_mask_all_checkpoints_eval_val_test.sh
src/lucaone/: __init__.py  configuration_lucaone.py  modeling_lucaone.py  tokenization_lucaone.py
src/models/: alphabet.py  lucaone_gplm.py  lucaone_gplm_config.py  model_utils.py  modeling_bert.py  modeling_gplm.py  pooling.py
src/scripts/: convert_weights.py
src/test/: test_flash_attention.py  test_lucaone_embedding.py  (+4 more)
(+99 files in other folders)
